--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <canvas id="gameCanvas" style="background: lightgray; border: 2px solid black;"></canvas>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Digital Pet Game</title>
@@ -24,6 +23,8 @@
       display: block;
       width: 100vw;
       height: 100vh;
+      background: lightgray;
+      border: 2px solid black;
       touch-action: none;
     }
 
