--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <div id="globalHealthContainer">
     <div id="globalHealthBar"></div>
   </div>
-
+  <script type="module" src="game.js"></script>
   <script type="module">
     import { mintPrize } from './walletconnect.js';
     import './game.js';
