--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
   <div id="ui">
     <div class="btn-group">
-      <button class="btn" id="btnEat" tabindex="1">🍔 Eat</button>
+      <button class="btn" id="btnEat" tabindex="1">🔌 Train</button>
       <div class="status-bar" id="eatBar"></div>
     </div>
     <div class="btn-group">
