--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
   <div id="ui">
     <div class="btn-group">
-      <button class="btn" id="btnEat" tabindex="1">🔌 Train</button>
-      <div class="status-bar" id="eatBar"></div>
+      <button class="btn" id="btnTrain" tabindex="1">🔌 Train</button>
+      <div class="status-bar" id="trainBar"></div>
     </div>
     <div class="btn-group">
       <button class="btn" id="btnSleep" tabindex="2">😴 Sleep</button>
