--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
       box-sizing: border-box;
     }
 
-    html, body {
-      width: 100%;
-      height: 100%;
-      background-color: #111;
-      font-family: 'Arial', sans-serif;
-      overflow: hidden;
-    }
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+}
 
-    canvas {
-      display: block;
-      width: 100vw;
-      height: 100vh;
-      background: lightgray;
-      border: 2px solid black;
-      touch-action: none;
-    }
+canvas {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: lightgray;
+  border: 2px solid black;
+  touch-action: none;
+}
 
     #ui {
       position: absolute;
