--- a/index.html
+++ b/index.html
@@ -148,9 +148,11 @@ canvas {
       <div class="status-bar" id="playBar"></div>
     </div>
     <div class="btn-group">
-      <button class="btn" id="btnConnect" tabindex="5">🔌 Connect Wallet</button>
+      <button class="btn" id="btnConnect" tabindex="5" disabled>🔌 Connect Wallet</button>
+      <div id="trainingProgressContainer" style="width: 100%; height: 10px; background: #333; margin-top: 5px; border-radius: 4px;">
+        <div id="trainingProgressBar" style="width: 0%; height: 100%; background: yellow; border-radius: 4px;"></div>
+      </div>
     </div>
-  </div>
 
   <div id="criticalWarning">⚠️ Critical Health!</div>
 
