--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Digital Pet Game</title>
-  <link rel="icon" href="data:;base64,iVBORw0KGgo="> <!-- Prevent 404 for favicon -->
+  <title>CyberPetsAi Trainer *Lite</title>
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
   <style>
     * {
@@ -14,22 +14,21 @@
       box-sizing: border-box;
     }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  height: 100%;
-  width: 100%;
-}
+    html, body {
+      overflow: hidden;
+      height: 100%;
+      width: 100%;
+      position: relative;
+    }
 
-canvas {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: lightgray;
-  border: 2px solid black;
-  touch-action: none;
-}
+    canvas {
+      display: block;
+      width: 100%;
+      height: 100%;
+      background: lightgray;
+      border: 2px solid black;
+      touch-action: none;
+    }
 
     #ui {
       position: absolute;
@@ -99,6 +98,21 @@ canvas {
       50% { opacity: 0.3; }
     }
 
+    #trainingProgressContainer {
+      width: 100%;
+      height: 10px;
+      background: #333;
+      margin-top: 5px;
+      border-radius: 4px;
+    }
+
+    #trainingProgressBar {
+      width: 0%;
+      height: 100%;
+      background: yellow;
+      border-radius: 4px;
+    }
+
     #globalHealthContainer {
       position: absolute;
       bottom: 10px;
@@ -115,9 +129,6 @@ canvas {
       height: 100%;
       background: limegreen;
       transition: width 0.2s;
-    }
-    body {
-      position: relative; /* needed for absolute child positioning */
     }
 
     #criticalWarning {
@@ -150,23 +161,24 @@ canvas {
       <button class="btn" id="btnPlay" tabindex="4">🎮 Play</button>
       <div class="status-bar" id="playBar"></div>
     </div>
-<div class="btn-group">
-  <button class="btn" id="btnConnect" tabindex="5" disabled>🔌 Connect Wallet</button>
-  <div id="trainingProgressContainer" style="width: 100%; height: 10px; background: #333; margin-top: 5px; border-radius: 4px;">
-    <div id="trainingProgressBar" style="width: 0%; height: 100%; background: yellow; border-radius: 4px;"></div>
+    <div class="btn-group">
+      <button class="btn" id="btnConnect" tabindex="5" disabled>🔌 Connect Wallet</button>
+      <div id="trainingProgressContainer">
+        <div id="trainingProgressBar"></div>
+      </div>
+    </div>
   </div>
-</div>
-
-  <div id="criticalWarning">⚠️ Critical Health!</div>
 
   <div id="globalHealthContainer">
     <div id="globalHealthBar"></div>
   </div>
 
+  <div id="criticalWarning">⚠️ Critical Health!</div>
+
   <script type="module">
     import './game.js';
     import { mintPrize } from './walletconnect.js';
-    // You can now call mintPrize() when needed
+    // Call mintPrize() when needed in your logic
   </script>
 </body>
 </html>
