--- a/index.html
+++ b/index.html
@@ -175,10 +175,16 @@
 
   <div id="criticalWarning">⚠️ Critical Health!</div>
 
-  <script type="module">
-    import './game.js';
-    import { mintPrize } from './walletconnect.js';
-    // Call mintPrize() when needed in your logic
-  </script>
+  <!-- External Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.85.2/dist/phaser.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.7/dist/index.min.js"></script>
+
+  <!-- Custom Scripts -->
+  <script src="walletconnect.js"></script>
+  <script src="game.js"></script>
+</body>
+</html>
 </body>
 </html>
