--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
   <script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.7/dist/index.min.js"></script>
 
   <!-- Custom Scripts -->
-  <script src="walletconnect.js"></script>
-  <script src="game.js"></script>
+<script type="module" src="game.js"></script>
+<script type="module" src="walletconnect.js"></script>
 </body>
 </html>
 </body>
