--- a/index.html
+++ b/index.html
@@ -175,11 +175,17 @@
 
   <div id="criticalWarning">⚠️ Critical Health!</div>
 
-  <!-- External Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.85.2/dist/phaser.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.7/dist/index.min.js"></script>
+<!-- Ethers.js -->
+<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+
+<!-- WalletConnect -->
+<script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+
+<!-- Web3Modal -->
+<script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.12/dist/index.js"></script>
+
+<!-- Your module -->
+<script type="module" src="/MoveToMint/walletconnect.js"></script>
 
   <!-- Custom Scripts -->
 <script type="module" src="game.js"></script>
