--- a/index.html
+++ b/index.html
@@ -176,21 +176,20 @@
   <div id="criticalWarning">⚠️ Critical Health!</div>
 
 <!-- Ethers.js -->
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script> -->
 
 <!-- WalletConnect -->
-<script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script> -->
 
 <!-- Web3Modal -->
-<script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.12/dist/index.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.12/dist/index.js"></script> -->
 
 <!-- Your module -->
-<script type="module" src="/MoveToMint/walletconnect.js"></script>
+<!--<script type="module" src="/MoveToMint/walletconnect.js"></script> -->
 
   <!-- Custom Scripts -->
-<script type="module" src="game.js"></script>
-<script type="module" src="walletconnect.js"></script>
-</body>
-</html>
+<!-- <script type="module" src="game.js"></script> -->
+<!-- <script type="module" src="walletconnect.js"></script> -->
+
 </body>
 </html>
