--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <!--<script type="module" src="/MoveToMint/walletconnect.js"></script> -->
 
   <!-- Custom Scripts -->
-<!-- <script type="module" src="game.js"></script> -->
+ <script type="module" src="game.js"></script> 
 <!-- <script type="module" src="walletconnect.js"></script> -->
 
 </body>
