--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
 
   <div id="ui">
     <div class="btn-group">
-      <button class="btn" id="btnTrain" tabindex="1">🔌 Train</button>
+      <button class="btn" id="btnTrain" tabindex="1">🧠 Train</button>
       <div class="status-bar" id="trainBar"></div>
     </div>
     <div class="btn-group">
-      <button class="btn" id="btnSleep" tabindex="2">😴 Sleep</button>
+      <button class="btn" id="btnSleep" tabindex="2">⚡ Charge</button>
       <div class="status-bar" id="sleepBar"></div>
     </div>
     <div class="btn-group">
-      <button class="btn" id="btnWash" tabindex="3">🛁 Wash</button>
+      <button class="btn" id="btnWash" tabindex="3">✨ Clean</button>
       <div class="status-bar" id="washBar"></div>
     </div>
     <div class="btn-group">
@@ -162,7 +162,7 @@
       <div class="status-bar" id="playBar"></div>
     </div>
     <div class="btn-group">
-      <button class="btn" id="btnConnect" tabindex="5" disabled>🔌 Connect Wallet</button>
+      <button class="btn" id="btnConnect" tabindex="5" disabled>☠️ Kill Command</button>
     </div>
   </div>
       <div id="trainingProgressContainer">
