--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
       <div class="status-bar" id="trainBar"></div>
     </div>
     <div class="btn-group">
-      <button class="btn" id="btnSleep" tabindex="2">⚡ Charge</button>
-      <div class="status-bar" id="sleepBar"></div>
+      <button class="btn" id="btnCharge" tabindex="2">⚡ Charge</button>
+      <div class="status-bar" id="chargeBar"></div>
     </div>
     <div class="btn-group">
-      <button class="btn" id="btnWash" tabindex="3">✨ Clean</button>
-      <div class="status-bar" id="washBar"></div>
+      <button class="btn" id="btnClean" tabindex="3">✨ Clean</button>
+      <div class="status-bar" id="cleanBar"></div>
     </div>
     <div class="btn-group">
       <button class="btn" id="btnPlay" tabindex="4">🎮 Play</button>
