--- a/index.html
+++ b/index.html
@@ -174,6 +174,33 @@
 
   <div id="criticalWarning">⚠️ Critical Health!</div>
 
+  <script>
+const killCommandBtn = document.getElementById('btnConnect');
+
+function handleKillCommand() {
+  const userConfirmed = confirm("⚠️ Initiate Kill Command?\nAll progress will be lost! Proceed?");
+  
+  if (userConfirmed) {
+    // Restart the page or restart game scene
+    location.reload();
+    
+    // OR, if using Phaser.js:
+    // game.scene.restart();
+
+    // OR, completely destroy game:
+    // game.destroy(true);
+  } else {
+    console.log("Kill Command aborted by user.");
+  }
+}
+
+// Handle both click and touch
+killCommandBtn.addEventListener('click', handleKillCommand);
+killCommandBtn.addEventListener('touchstart', (e) => {
+  e.preventDefault(); // prevent duplicate events
+  handleKillCommand();
+}, { passive: false });
+</script>
 <!-- Ethers.js -->
 <!--<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script> -->
 
