--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ function drawStartMenu() {
 
   if (showBlinkText) {
     ctx.font = "32px Arial";
-    ctx.fillStyle = "white";
+    ctx.fillStyle = "black";
     ctx.textAlign = "center";
     ctx.fillText("Press Enter to Start", canvas.width / 2, canvas.height * 0.8);
   }
