--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@ function drawStartMenu() {
   }
 
   if (showBlinkText) {
-    ctx.font = "32px Arial";
+    ctx.font = "48px Arial";
     ctx.fillStyle = "black";
     ctx.textAlign = "center";
-    ctx.fillText("Press Enter to Start", canvas.width / 2, canvas.height * 0.8);
+    ctx.fillText("Press Enter/Tap to Start", canvas.width / 2, canvas.height * 0.8);
   }
 }
 
