--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>CyberPetsAi Trainer *Lite</title>
+  <title>CyberPetsAi&copy; Trainer *Lite</title>
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
   <style>
